Added performance benchmark as a jmh test