@@ -1,26 +1,21 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>nl.bentels.test</groupId>
     <artifactId>rpsls-maven-test</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-
     <name>rpsls</name>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>15</maven.compiler.source>
         <maven.compiler.target>15</maven.compiler.target>
     </properties>
-
     <modules>
         <module>rpsls-core</module>
+        <module>rpsls-jmh-benchmarks</module>
     </modules>
-
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -32,7 +27,6 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
     <build>
         <plugins>
             <plugin>
@@ -43,11 +37,17 @@
                     <compilerVersion>${maven.compiler.source}</compilerVersion>
                     <compilerArgs>
                         <compilerArg>--enable-preview</compilerArg>
-                        <compilerArg>--illegal-access=warn</compilerArg>
                     </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <argLine>--illegal-access=permit --enable-preview</argLine>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-
 </project>
